ready home block

--- a/dev/pug/pages/index.pug
+++ b/dev/pug/pages/index.pug
@@ -4,4 +4,15 @@ block variables
 	- var title = 'Главная страница'
 	- var pageClass = 'index-page'
 
+
 block content
+	div.home-sec
+		div.home-info
+			h1.home-title Denis</br>Novik
+			p.home-text UX | UI designer</br>24 years old, Minsk
+			p.languages-switcher-button RU 
+				span | ENG
+
+		div.home-img
+
+	div.about-sec
