--- a/dev/pug/layout/main.pug
+++ b/dev/pug/layout/main.pug
@@ -19,10 +19,11 @@ html(lang="ru-RU")
 		<![endif]-->
 	body(class=pageClass)
 		.wrapper
-			include ../modules/header
-			.content
-				block content
-			include ../modules/footer
+				.main
+					include ../modules/header
+					.content
+						block content
+					include ../modules/footer
 		script(src="static/js/jquery.js")
 		script(src="static/js/libs.min.js")
 		script(src="static/js/main.js")
